finish consent APIs
